# InstructionProcessor

./: .gitignore  CMakeLists.txt  CreateCMakeBuildDirectory.py  CreateCodeCoverageReport.py  GenerateCodeCoverage.py  LICENSE  Minimal.runsettings  NonMovable.h  OpCodeEight.h  OpCodeFive.h  OpCodeFiveTest.cpp  OpCodeFour.h  OpCodeFourTest.cpp  OpCodeInterface.h  OpCodeNinetyNine.h  OpCodeOne.h  OpCodeOneTest.cpp  OpCodeProcessor.h  OpCodeProcessorTest.cpp  OpCodeProcessorUtils.h  OpCodeProcessorUtilsTest.cpp  OpCodeSeven.h  OpCodeSix.h  OpCodeThree.h  OpCodeThreeTest.cpp  OpCodeTwo.h  OpCodeTwoTest.cpp  README.md  Utils.h  UtilsTest.cpp  clang-profile.txt  conanfile.txt
conan_profiles/: conan_clang_profile_linux.txt  conan_clang_profile_windows.txt  conan_gcc_profile_linux.txt  conan_msvc_profile_windows.txt
src/: CMakeLists.txt  NonCopyable.h  NonMovable.h  OpCodeEight.cpp  OpCodeEight.h  OpCodeFive.h  OpCodeFiveTest.cpp  OpCodeFour.cpp  OpCodeFour.h  OpCodeInterface.h  OpCodeNine.h  OpCodeNinetyNine.h  OpCodeOne.cpp  OpCodeOne.h  OpCodeProcessor.h  OpCodeProcessorUtils.h  OpCodeProcessorUtilsTest.cpp  OpCodeSeven.cpp  OpCodeSeven.h  OpCodeSevenTest.cpp  OpCodeSix.cpp  OpCodeSix.h  OpCodeSixTest.cpp  OpCodeThree.h  OpCodeTwo.cpp  OpCodeTwo.h  Utils.cpp  Utils.h  UtilsTest.cpp
src/Commands/: AddCmd.h  AdjustRelBaseCmd.h  CMakeLists.txt  Cmd.h  ExitCmd.h  FirstParamEqToSecondCmd.h  FirstParamLessThanSecondCmd.h  MultiplyCmd.h  NonZeroParamCmd.h  StoreInputCmd.h  StoreOutputCmd.h  ZeroParamCmd.h
src/InstructionProcessor/: CMakeLists.txt  InstructionProcessor.h
src/OpCode/: CMakeLists.txt  OpCode.h
src/OpCodeInterface/: CMakeLists.txt
src/OpCodes/: CMakeLists.txt  OpCodeEight.cpp  OpCodeEight.h  OpCodeFive.cpp  OpCodeFive.h  OpCodeFour.cpp  OpCodeFour.h  OpCodeNine.cpp  OpCodeNine.h  OpCodeNinetyNine.h  OpCodeOne.cpp  OpCodeOne.h  OpCodeSeven.cpp  OpCodeSeven.h  OpCodeSix.cpp  OpCodeSix.h  OpCodeThree.cpp  OpCodeThree.h  OpCodeTwo.cpp  OpCodeTwo.h
src/Utils/: CMakeLists.txt  InputContainer.h  InstructionProcessorUtils.h  NonCopyable.h  NonMovable.h  Utils.h
tst/: CMakeLists.txt  OpCodeEightTest.cpp  OpCodeFiveTest.cpp  OpCodeFourTest.cpp  OpCodeOneTest.cpp  OpCodeProcessorTest.cpp  OpCodeProcessorUtilsTest.cpp  OpCodeSevenTest.cpp  OpCodeSixTest.cpp  OpCodeThreeTest.cpp  OpCodeTwoTest.cpp  UtilsTest.cpp
